# study-air-hockey

./: .gitignore  CMakeLists.txt  README.md  dropping.cpp  ego_motion_events.cpp  give_input.sh  playback_table.sh  puck_far.cpp
app/scripts/: app_motion-prediction.xml  app_vAirHockeyDemo.xml  demo_harris.xml  dumper.xml  egoMotion.xml
gaussianTracker/: CMakeLists.txt
gaussianTracker/include/: blobTracker.h  gaussianTracker.h
gaussianTracker/src/: blobTracker.cpp  gaussianTracker.cpp
jointSinMotion/: CMakeLists.txt  jointSinMotion.cpp
motion-prediction/: CMakeLists.txt  motion-prediction.cpp
particleFilterTracker/include/: vControlLoopDelay.h
particleFilterTracker/src/: vControlLoopDelay.cpp
puck_position/: CMakeLists.txt
puck_position/include/: puck_position.h
puck_position/src/: puck_position.cpp
python/: 2dconv.py  control_analysis.py  draw_dog.py  ground_truth.py  ground_truth_plot.py  irosPlots.py  joint_traj_plot.py  modify_bottle_file.py  quartiles.py  readKalman.py  read_dat.py  read_displacement.py  read_ego_motion_events.py  workshop.py
shape_detector/: shape_detector.cpp
src/: linearTraj.h  study-1.cpp  study-2.cpp  study-3.cpp
tracker/: CMakeLists.txt
tracker/include/: tracker.h
tracker/src/: tracker.cpp
